fix spacing b/w related links & add complete g5gle

--- a/style.css
+++ b/style.css
@@ -239,9 +239,11 @@ a:hover {
 
 b {
     color: #6a6a6a;
+    line-height: 20px;
 }
 
 #related {
+    margin-bottom: 26px;
 }
 
 #related-title {
@@ -264,6 +266,7 @@ b {
 
 .related-link:hover {
     text-decoration: underline;
+    color: #1a0dab;
 }
 
 .related-column {
@@ -271,34 +274,92 @@ b {
     display: inline-block;
 }
 
-.footer {   
-    list-style-type: none; 
-    box-sizing: border-box; 
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #F0EFEF;
-    padding: 11px 22px;
-    border-top: 1px solid #DCDADA; 
-    /*     top: 60%;  */
+#g5gle {
+    margin-bottom: 26px;
 }
 
-/* li elements inside footer class */
-.footer li {
-    font: 12px sans-serif;
-    display: inline; 
+#g5gle-table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    margin-right: 167px;
 }
 
-.left-footer {
-    float: left;
+td {
+    text-align: center;
 }
 
-.left-footer li a, .right-footer li a {
-    margin: 0 12px;
+.g5gle-link {
+    font-size: small;
+    font-family: arial, sans-serif;
+    color: #4285f4;
 }
 
-.right-footer {
-    float: right;
+.g5gle-link:hover {
+    color: #4285f4;
+    text-decoration: underline;
+}
+
+#g5gle-1 {
+    color: rgba(0,0,0,0.87);
+    font-size: small;
+    font-family: arial, sans-serif;
+}
+
+#first-G {
+    display: block;
+    background-image: url('https://www.google.co.in/images/nav_logo242.png');
+    background-repeat: no-repeat;
+    background-position: -24px 0;
+    width: 28px;
+    height: 40px;
+}
+
+#red-o {
+    display: block;
+    background-image: url('https://www.google.co.in/images/nav_logo242.png');
+    background-repeat: no-repeat;
+    background-position: -53px 0;
+    width: 20px;
+    height: 40px;
+}
+
+.yellow-o {
+    display: block;
+    background-image: url('https://www.google.co.in/images/nav_logo242.png');
+    background-repeat: no-repeat;
+    background-position: -74px 0;
+    width: 20px;
+    height: 40px;
+}
+
+#last-gle {
+    display: block;
+    background-image: url('https://www.google.co.in/images/nav_logo242.png');
+    background-repeat: no-repeat;
+    background-position: -96px 0;
+    width: 71px;
+    height: 40px;
+    text-align: right;
+}
+
+
+
+#footer {
+    padding-top: 18px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+
+#location {
+    margin-left: 166px;
+}
+
+#dot {
+    display: inline-block;
+    border-radius: 100%;
+    height: 10px;
+    width: 10px;
+    background-color: #9e9e9e; 
 }
 
 
